--- a/prayerbook/trans_ui_en.plist
+++ b/prayerbook/trans_ui_en.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>synaxarion_annotation</key>
+	<string>Synaxaria of the Triodion and Pentecostarion</string>
 	<key>Orthodox Church in Hong Kong</key>
 	<string>Sts. App. Peter and Paul Orthodox Church in Hong Kong </string>
 	<key>church_info</key>
@@ -17,5 +19,11 @@
 	<string>Install &quot;Church&quot; app</string>
 	<key>copyright_info</key>
 	<string>(C) 2022 Brotherhood of Sts Apostles Peter and Paul in Hong Kong</string>
+    <key>bible</key>
+    <string>Bible</string>
+    <key>liturgical_books</key>
+    <string>Liturgical books</string>
+    <key>other</key>
+    <string>Other</string>
 </dict>
 </plist>
