--- a/CalendarWidget/CalendarWidget.entitlements
+++ b/CalendarWidget/CalendarWidget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.rlc.ponomar</string>
+		<string>group.rlc.ponomar2</string>
 	</array>
 </dict>
 </plist>
