--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,10 @@
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control?
 #
 # Pods/
-prayerbook/icons/*
+
+Carthage/**
+
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
 
