findingOfHead on leap year

--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -228,6 +228,8 @@
     <string>上帝圣灵日</string>
     <key>holyWeek</key>
     <string>圣周</string>
+    <key>findingOfHead</key>
+    <string>初次（4世纪）及再次（452年）寻获施浸者前驱圣约翰之圣首</string>
     <key>iveronTheotokos</key>
     <string>伊维隆圣母像纪念日（9世纪）</string>
     <key>josephArimathea</key>
