--- a/prayerbook/trans_cal_en.plist
+++ b/prayerbook/trans_cal_en.plist
@@ -174,6 +174,8 @@
 	<string>Synaxis of all saints of Moscow</string>
 	<key>synaxisNizhnyNovgorodSaints</key>
 	<string>Synaxis of all saints of Nizhny Novgorod</string>
+    <key>findingOfHead</key>
+    <string>The First (IV) and the Second Discovery of the Head of St. John the Forerunner</string>
 	<key>josephArimathea</key>
 	<string>St Joseph of Arimathea, and Nicodemus</string>
 	<key>tamaraGeorgia</key>
