Feofan Dec fixed

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 # you should judge for yourself, the pros and cons are mentioned at:
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control?
 #
-# Pods/
 
-Carthage/**
+.DS_Store
+/.build
+/Packages
+xcuserdata/
+DerivedData/
 
 *.xcuserstate
 project.xcworkspace/
-xcuserdata/
 
 
