Feofan great lent

--- a/prayerbook/trans_ui_cn.plist
+++ b/prayerbook/trans_ui_cn.plist
@@ -50,7 +50,7 @@
 	<string>图书馆</string>
 	<key>Memory of saints</key>
 	<string>本日记念之圣人</string>
-	<key>Gospel of the day</key>
+	<key>Reading of the day</key>
 	<string>本日讀經</string>
 	<key>Daily</key>
 	<string>每日</string>
