--- a/prayerbook/trans_ui_hk.plist
+++ b/prayerbook/trans_ui_hk.plist
@@ -50,7 +50,7 @@
 	<string>圖書館</string>
 	<key>Memory of saints</key>
 	<string>本日記念之聖人</string>
-	<key>Gospel of the day</key>
+	<key>Reading of the day</key>
 	<string>本日讀經</string>
 	<key>Daily</key>
 	<string>每日</string>
