--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -115,5 +115,7 @@
 	<string>Православный календарь на %d г.</string>
 	<key>From %@ till %@ — %@</key>
 	<string>С %@ по %@ — %@</string>
+    <key>Lives of saints</key>
+    <string>Жития святых</string>
 </dict>
 </plist>
