--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -240,6 +240,8 @@
     <string>纪念亡者</string>
     <key>koretsTheotokos</key>
     <string>至圣诞神女“罪人之保”圣像（柯列茨卡娅，1622年）</string>
+    <key>kurskTheotokos</key>
+    <string>「库尔斯克之根·符印之母」圣母像纪念日</string>
     <key>lazarusSaturday</key>
     <string>圣枝安息日（拉匝若复生之安息日）</string>
     <key>maslenitsa</key>
