--- a/prayerbook/trans_cal_en.plist
+++ b/prayerbook/trans_cal_en.plist
@@ -198,6 +198,8 @@
 	<string>Icon of the Mother of God “Surety of Sinners” in Korets (1622)</string>
 	<key>softenerTheotokos</key>
 	<string>Icons of the Mother of God: “the Softener of evil hearts” and “the Indestructible Wall”</string>
+    <key>kurskTheotokos</key>
+    <string>«Tabynsk» and «Kursk-Root» Icons of the Most Holy Theotokos</string>
 	<key>apodosis_pascha</key>
 	<string>Apodosis of Pascha</string>
 	<key>afterfeast_ascension</key>
