--- a/prayerbook/trans_cal_hk.plist
+++ b/prayerbook/trans_cal_hk.plist
@@ -240,6 +240,8 @@
 	<string>紀念亡者</string>
 	<key>koretsTheotokos</key>
 	<string>至聖誕神女“罪人之保”聖像（柯列茨卡婭，1622年）</string>
+    <key>kurskTheotokos</key>
+    <string>「庫爾斯克之根·符印之母」聖母像紀念日</string>
 	<key>lazarusSaturday</key>
 	<string>聖枝安息日（拉匝若復生之安息日）</string>
 	<key>maslenitsa</key>
